Fix flexbox display on mobile view of More Info/Home pages in Safari; other minor fixes
Added recaptcha fix for Google API script race condition (don't render the recaptcha until the API has loaded)

Minify CSS/JS

Replace <a> tags with <Link> tags for in-app links

Clear Thank-You page redirect timer if user clicks on a different page

--- a/src/styles/common/_secondary-section.scss
+++ b/src/styles/common/_secondary-section.scss
@@ -12,5 +12,6 @@
 
 	@media (max-width: 1250px) {
 		padding-top: (2 * $padding-small);
+		padding-bottom: (2 * $padding-small);
 	}
 }
